Issue 2943 fixed. Admin layout align center.
git-svn-id: http://xe-core.googlecode.com/svn/branches/maserati@12739 201d5d3c-b55e-5fd7-737f-ddc643e51545

--- a/modules/admin/tpl/css/admin.css
+++ b/modules/admin/tpl/css/admin.css
@@ -2,7 +2,7 @@
 /* Reset */
 html,body{min-height:100%}
 body{-webkit-text-size-adjust:none}
-body>.x:first-child{min-width:300px;max-width:1240px}
+body>.x:first-child{min-width:300px;max-width:1240px;margin:0 auto}
 body>.x,
 .x label,
 .x table,
